--- a/styles/pass.module.scss
+++ b/styles/pass.module.scss
@@ -8,7 +8,6 @@
     margin: auto;
 
     .nftInfo {
-      height: 55.17rem;
       background: #ffffff;
       padding: 5rem;
 
@@ -48,10 +47,11 @@
           p {
             margin-top: 1.67rem;
 
+            max-width: 550px;
             font-size: 1.5rem;
             font-family: Inter-Medium, Inter;
             font-weight: 500;
-            color: rgba(#222222, 0.5);
+            color: #222222;
             line-height: 2.5rem;
           }
         }
@@ -93,7 +93,7 @@
 
     .progress {
       margin-top: 3.33rem;
-      height: 25.42rem;
+      // height: 25.42rem;
       background: #ffffff;
       padding: 5rem;
 
@@ -113,7 +113,13 @@
         line-height: 1.75rem;
         margin: 3.33rem 0 1.67rem;
       }
-
+      h6 {
+        font-size: 1.33rem;
+        font-family: Inter-Medium, Inter;
+        font-weight: 500;
+        color: rgba($color: #222222, $alpha: 0.5);
+        line-height: 2rem;
+      }
       p {
         font-size: 1.75rem;
         font-family: Inter-Medium, Inter;
@@ -133,6 +139,7 @@
         color: #222222;
         line-height: 1.75rem;
         user-select: none;
+        margin-bottom: 3.33rem;
 
         // .linerProgress {
         //   flex-grow: 1;
@@ -178,7 +185,7 @@
           color: #222222;
           line-height: 1.75rem;
         }
-        
+
         .taskTime {
           font-size: 1.75rem;
           font-family: Inter-Medium, Inter;
@@ -200,6 +207,33 @@
         display: flex;
         justify-content: space-between;
         .taskDetailInfo {
+          .taskList {
+            display: flex;
+            align-items: center;
+            margin: 7rem auto;
+
+            .taskItem {
+              display: flex;
+              align-items: center;
+              p {
+                font-size: 1.33rem;
+                font-family: Inter-Medium, Inter;
+                font-weight: 500;
+                color: #222222;
+                line-height: 2rem;
+                max-width: 12rem;
+                margin-top: 0;
+              }
+              div {
+                position: relative;
+                flex-shrink: 0;
+                flex-grow: 0;
+                width: 4.67rem;
+                height: 4.67rem;
+                margin-right: 0.83rem;
+              }
+            }
+          }
           .taskLink {
             display: inline-block;
             background: linear-gradient(270deg, #e4405b 0%, #8e50e4 100%);
@@ -227,6 +261,8 @@
         }
 
         .taskIllustration {
+          display: flex;
+          align-items: center;
           div {
             width: 23.83rem;
             height: 21.33rem;
