--- a/components/GameInfo/styles.module.scss
+++ b/components/GameInfo/styles.module.scss
@@ -1,5 +1,5 @@
 .gameinfoBox {
-  max-width: 100rem;
+  max-width: 83.33rem;
   margin: auto;
   display: flex;
   padding: 5.83rem 0;
@@ -17,6 +17,34 @@
     overflow: hidden;
   }
 
+  .socialList {
+    button + button {
+      margin-left: 1.67rem;
+    }
+  }
+
+  .tagList {
+    display: flex;
+    justify-content: flex-start;
+    margin: 1.67rem 0 2.5rem;
+
+    .tagItem {
+      border-radius: 1.83rem;
+      opacity: 0.5;
+      border: 0.04rem solid #222222;
+      font-size: 1rem;
+      font-family: Inter-Medium, Inter;
+      font-weight: 500;
+      color: #222222;
+      line-height: 2rem;
+      padding: 0 1.25rem;
+
+      & + .tagItem {
+        margin-left: 0.83rem;
+      }
+    }
+  }
+
   .infoBox {
     // display: flex;
     flex-grow: 1;
@@ -32,35 +60,91 @@
         background-color: rgba($color: #4a99e9, $alpha: 0.1);
       }
     }
+  }
+  .gameDesc {
+    font-size: 1.5rem;
+    font-family: Inter-Medium, Inter;
+    font-weight: 500;
+    color: #222222;
+    line-height: 2.5rem;
+  }
 
-    .tagList {
-      display: flex;
-      justify-content: flex-start;
-      margin: 1.67rem 0 2.5rem;
+  .mobileHeader {
+    display: flex;
+    align-items: flex-end;
 
-      .tagItem {
-        border-radius: 1.83rem;
-        opacity: 0.5;
-        border: 0.04rem solid #222222;
-        font-size: 1rem;
-        font-family: Inter-Medium, Inter;
-        font-weight: 500;
-        color: #222222;
-        line-height: 2rem;
-        padding: 0 1.25rem;
-
-        & + .tagItem {
-          margin-left: 0.83rem;
-        }
-      }
+    .imageCover {
+      width: 30vw;
+      height: 30vw;
+      max-width: 12rem;
+      max-height: 12rem;
+      position: relative;
+      background: #d2d2d2;
+      border-radius: 1rem;
+      // border: 0.5rem solid #ffffff;
+      overflow: hidden;
+      margin-right: 3vw;
+      flex-shrink: 0;
     }
 
+    .gameTitle {
+      display: flex;
+      flex-direction: column;
+      align-self: flex-end;
+
+      h3 {
+        font-size: 2rem;
+        font-family: Inter-Bold, Inter;
+        font-weight: bold;
+        color: #222222;
+        line-height: 2rem;
+      }
+
+      .tagList {
+        margin: 0.83rem 0 0 0;
+      }
+    }
+  }
+  .mobileBox {
     .gameDesc {
-      font-size: 1.5rem;
+      font-size: 1.33rem;
       font-family: Inter-Medium, Inter;
       font-weight: 500;
       color: #222222;
-      line-height: 2.5rem;
+      line-height: 2rem;
+      margin: 2rem auto;
     }
+    .socialList {
+      button {
+        width: 3rem;
+        height: 3rem;
+        background-color: rgba($color: #4a99e9, $alpha: 0.1);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .gameinfoBox {
+    width: 66.67rem;
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .gameinfoBox {
+    width: calc(100% - 5rem);
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .gameinfoBox {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .gameinfoBox {
+    width: calc(100% - 2.66rem);
+    padding: 1rem 0 1.5rem;
   }
 }
