--- a/components/PageHome/Support/style.module.scss
+++ b/components/PageHome/Support/style.module.scss
@@ -22,6 +22,11 @@
           position: relative;
           height: 100%;
         }
+
+        &:hover {
+          box-shadow: 0 2px 10px #1d293924;
+          border: 0.08rem solid rgba(#222, 0.1);
+        }
       }
     }
   }
