--- a/styles/pass.module.scss
+++ b/styles/pass.module.scss
@@ -224,13 +224,19 @@
                 max-width: 12rem;
                 margin-top: 0;
               }
-              div {
-                position: relative;
-                flex-shrink: 0;
-                flex-grow: 0;
+              button {
+                background-color: #222;
                 width: 4.67rem;
                 height: 4.67rem;
                 margin-right: 0.83rem;
+                flex-shrink: 0;
+                flex-grow: 0;
+                svg {
+                  color: white;
+                  font-size: 2.8rem;
+                  width: 2.8rem;
+                  height: 2.8rem;
+                }
               }
             }
           }
