--- a/components/PageHome/HotGames/style.module.scss
+++ b/components/PageHome/HotGames/style.module.scss
@@ -1,5 +1,4 @@
 .hotGames {
-
   .hotGamesBox {
     height: 100%;
     width: 78.2%;
@@ -15,22 +14,24 @@
       & > div {
         width: calc((100% - 8.32rem) / 5);
         margin-bottom: 2.67rem;
+
+        box-shadow: none;
+        &:hover {
+          box-shadow: 0 6px 18px #1d293924;
+        }
       }
     }
   }
 }
 
-
 @media screen and (max-width: 1650px) {
   .hotGames {
-
     .hotGamesBox {
       width: 80%;
       .cardList {
-      
         & > div {
           width: calc((100% - 7rem) / 4);
-          margin-bottom: 2.3rem; 
+          margin-bottom: 2.3rem;
         }
       }
     }
@@ -39,12 +40,10 @@
 
 @media screen and (max-width: 1440px) {
   .hotGames {
-
     .hotGamesBox {
       width: 83.3%;
       padding-top: 6.67rem;
       .cardList {
-
         & > div {
           width: calc((100% - 6rem) / 4);
           margin-bottom: 2rem;
@@ -56,11 +55,10 @@
 
 @media screen and (max-width: 1240px) {
   .hotGames {
-
     .hotGamesBox {
       width: 89%;
       padding-top: 5rem;
-      
+
       .cardList {
         margin-top: 2.5rem;
       }
@@ -68,13 +66,12 @@
   }
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
   .hotGames {
-
     .hotGamesBox {
       width: 92.2%;
       padding-top: 5rem;
-      
+
       .cardList {
         margin-top: 2.5rem;
       }
@@ -82,11 +79,9 @@
   }
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
   .hotGames {
-
     .hotGamesBox {
-      
       .cardList {
         & > div {
           width: calc((100% - 4rem) / 3);
@@ -96,8 +91,7 @@
   }
 }
 
-
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px) {
   .hotGames {
     .hotGamesBox {
       width: calc(100% - 2.66rem);
