--- a/components/PageModals/styles.module.scss
+++ b/components/PageModals/styles.module.scss
@@ -159,3 +159,65 @@
     }
   }
 }
+
+.quickTrialBox {
+  width: 31.67rem;
+  height: 43.17rem;
+  background: #fcfcfc;
+  border-radius: 1.33rem;
+  padding: 2.42rem 2.5rem;
+
+  .modalHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    p {
+      font-size: 1.75rem;
+      font-family: Inter-Bold, Inter;
+      font-weight: bold;
+      color: rgba(#222, 0.5);
+      line-height: 1.75rem;
+    }
+  }
+
+  .modalContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    .cardBox {
+      width: 18.33rem;
+      margin: 2.5rem auto;
+      box-shadow: 0rem 0.33rem 5rem 0rem rgba(0, 0, 0, 0.1);
+      border-radius: 1rem;
+      overflow: hidden;
+    }
+
+    .tryAnother {
+      display: flex;
+      justify-content: center;
+      cursor: pointer;
+      user-select: none;
+      p {
+        text-decoration: underline;
+        margin-left: 0.5rem;
+      }
+    }
+  }
+
+  .btnBox {
+    display: inline-block;
+    font-size: 1.33rem;
+    font-family: Inter-SemiBold, Inter;
+    font-weight: 600;
+    color: #ffffff;
+    line-height: 1.33rem;
+    padding: 1.33rem 4.42rem;
+    background: linear-gradient(270deg, #f82757 0%, #984cec 100%);
+    border-radius: 2.42rem;
+    text-align: center;
+    user-select: none;
+    cursor: pointer;
+    margin-top: 1.67rem;
+  }
+}
