--- a/styles/strategy.module.scss
+++ b/styles/strategy.module.scss
@@ -21,12 +21,20 @@
     color: #222222;
     line-height: 3.33rem;
   }
-
+  p {
+    font-size: 1.5rem;
+    font-family: Inter-Regular, Inter;
+    font-weight: 400;
+    color: #222222;
+    line-height: 2.67rem;
+    margin: 1.67rem auto;
+  }
   img {
     max-width: 100%;
     text-align: center;
     margin: 2rem auto;
     display: flex;
+    max-height: 1000px;
   }
 
   pre {
@@ -81,7 +89,6 @@
       margin-top: 3rem;
     }
   }
-  
 }
 
 @media screen and (max-width: 600px) {
