--- a/styles/strategy.module.scss
+++ b/styles/strategy.module.scss
@@ -19,9 +19,9 @@
     font-family: Inter-Bold, Inter;
     font-weight: bold;
     color: #222222;
-    line-height: 3.33rem;
+    // line-height: 3.33rem;
   }
-  p {
+  p, li {
     font-size: 1.5rem;
     font-family: Inter-Regular, Inter;
     font-weight: 400;
@@ -29,12 +29,15 @@
     line-height: 2.67rem;
     margin: 1.67rem auto;
   }
+  li {
+    margin: 1rem auto;
+  }
   img {
     max-width: 100%;
     text-align: center;
     margin: 2rem auto;
     display: flex;
-    max-height: 700px;
+    max-height: 500px;
   }
 
   pre {
