--- a/components/PageHome/HotGames/style.module.scss
+++ b/components/PageHome/HotGames/style.module.scss
@@ -17,7 +17,7 @@
 
         box-shadow: none;
         &:hover {
-          box-shadow: 0 6px 18px #1d293924;
+          box-shadow: 0rem 0.5rem 2.5rem 0rem rgba(142,80,228,0.1);
         }
       }
     }
