--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -32,6 +32,21 @@
           margin-left: 4.17rem;
         }
       }
+
+      & > div {
+        &:hover {
+          color: #8e50e4;
+        }
+      }
+
+      .disabled {
+        color: rgba($color: #222, $alpha: 0.5);
+
+        &:hover {
+          color: rgba($color: #222, $alpha: 0.5);
+          cursor: not-allowed;
+        }
+      }
     }
 
     .headerSetting {
@@ -77,7 +92,7 @@
         box-shadow: 0 0 0 8px transparent;
 
         margin-left: 1rem;
-        
+
         &:hover {
           animation: none;
         }
