chore: update assets

--- a/styles/pass.module.scss
+++ b/styles/pass.module.scss
@@ -20,11 +20,11 @@
           width: 18.33rem;
           height: 18.33rem;
           position: relative;
-          background: #d8d8d8;
           border-radius: 1rem;
           overflow: hidden;
           flex-shrink: 0;
           flex-grow: 0;
+          background: linear-gradient(#70fac5, #9552eb);
         }
         .nftIntro {
           flex-grow: 1;
