--- a/components/PageHome/HotGames/style.module.scss
+++ b/components/PageHome/HotGames/style.module.scss
@@ -17,7 +17,7 @@
 
         box-shadow: none;
         &:hover {
-          box-shadow: 0rem 0.5rem 2.5rem 0rem rgba(142,80,228,0.1);
+          box-shadow: 0rem 0.5rem 2.5rem 0rem rgba(142, 80, 228, 0.1);
         }
       }
     }
@@ -29,6 +29,8 @@
     .hotGamesBox {
       width: 80%;
       .cardList {
+        max-height: calc((80vw - 7rem) / 2 + 294px);
+        overflow: hidden;
         & > div {
           width: calc((100% - 7rem) / 4);
           margin-bottom: 2.3rem;
@@ -44,6 +46,8 @@
       width: 83.3%;
       padding-top: 6.67rem;
       .cardList {
+        max-height: calc((83vw - 6rem) / 2 + 294px);
+
         & > div {
           width: calc((100% - 6rem) / 4);
           margin-bottom: 2rem;
@@ -60,6 +64,8 @@
       padding-top: 5rem;
 
       .cardList {
+        max-height: calc((89vw - 6rem) / 2 + 294px);
+
         margin-top: 2.5rem;
       }
     }
@@ -73,6 +79,8 @@
       padding-top: 5rem;
 
       .cardList {
+        max-height: calc((92.2vw - 6rem) / 2 + 294px);
+
         margin-top: 2.5rem;
       }
     }
@@ -83,6 +91,7 @@
   .hotGames {
     .hotGamesBox {
       .cardList {
+        max-height: calc((92.2vw) + 282px);
         & > div {
           width: calc((100% - 4rem) / 3);
         }
@@ -99,6 +108,8 @@
 
       .cardList {
         margin-top: 1.67rem;
+        height: auto;
+        max-height: none;
         & > div {
           width: calc((100% - 1.33rem) / 2);
           margin-bottom: 1.33rem;
