chore: update home banner

--- a/styles/strategy.module.scss
+++ b/styles/strategy.module.scss
@@ -79,7 +79,7 @@
   .topCover {
     height: 15rem;
   }
-  .gameinfoBox {
+  .gameInfoBox {
     width: calc(100% - 2.66rem);
     margin: 1rem 1.33rem 1.5rem !important;
   }
@@ -95,7 +95,7 @@
 }
 
 @media screen and (max-width: 600px) {
-  .gameinfoBox {
+  .gameInfoBox {
     width: calc(100% - 2.66rem);
     margin: 1rem 1.33rem 1.5rem !important;
   }
