--- a/components/PageHome/components/StrategyArticle/style.module.scss
+++ b/components/PageHome/components/StrategyArticle/style.module.scss
@@ -200,15 +200,19 @@
   }
 }
 
-// @media screen and (max-width: 600px){
-//   .articleCard {
-//     .articleInfo {
-//       .linkBtn {
-//         display: none;
-//       }
-//     }
-//   }
-// }
+@media screen and (max-width: 600px){
+  .articleCard {
+    .articleInfo {
+      .linkBtn {
+        display: none;
+      }
+
+      h3 {
+        font-weight: 500;
+      }
+    }
+  }
+}
 
 @media screen and (max-width: 375px) {
   .articleCard {
