--- a/components/PageHome/components/StrategyArticle/style.module.scss
+++ b/components/PageHome/components/StrategyArticle/style.module.scss
@@ -51,8 +51,8 @@
     }
 
     .linkBtn {
-      display: flex;
-      width: 11.17rem;
+      display: inline-flex;
+      width: 15rem;
       border-radius: 1.83rem;
       border: 0.08rem solid rgba(228, 64, 91, 1);
       padding: 0px 1.67rem;
