--- a/styles/pass.module.scss
+++ b/styles/pass.module.scss
@@ -368,6 +368,8 @@
                 margin-right: 0.67rem;
                 svg {
                   color: white !important;
+                  width: 1.6rem;
+                  height: 1.6rem;
                 }
               }
             }
@@ -629,6 +631,10 @@
             height: 1.64rem;
           }
         }
+      }
+
+      .taskBox {
+
       }
     }
   }
