fix(pass): update pass nft desc

--- a/styles/pass.module.scss
+++ b/styles/pass.module.scss
@@ -47,7 +47,8 @@
           p {
             margin-top: 1.67rem;
 
-            max-width: 550px;
+            // max-width: 550px;
+            // width: 9%;
             font-size: 1.5rem;
             font-family: Inter-Medium, Inter;
             font-weight: 500;
