--- a/components/PageModals/styles.module.scss
+++ b/components/PageModals/styles.module.scss
@@ -224,3 +224,80 @@
     margin-top: 1.67rem;
   }
 }
+
+.activeChainConfirm {
+  width: 32.5rem;
+  // height: 41rem;
+  background: #ffffff;
+  border-radius: 1.33rem;
+  padding: 1.5rem 1rem 1.5rem;
+  text-align: center;
+  position: relative;
+
+  .modalHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    p {
+      font-size: 1.75rem;
+      font-family: Inter-Bold, Inter;
+      font-weight: bold;
+      color: rgba(#222, 0.8);
+      line-height: 1.75rem;
+    }
+  }
+
+  .modalContent {
+    padding: 1.67rem 1.67rem 1rem;
+
+    p {
+      font-size: 1.5rem;
+      font-family: Inter-Medium, Inter;
+      font-weight: 500;
+      color: #222222;
+    }
+    .activeBtn {
+      margin-top: 2rem;
+      padding: 1.33rem;
+      font-size: 1.33rem;
+      font-family: Inter-SemiBold, Inter;
+      font-weight: 600;
+      color: #ffffff;
+      line-height: 1.33rem;
+      background: linear-gradient(270deg, #f82757 0%, #984cec 100%);
+      border-radius: 2.42rem;
+      user-select: none;
+      cursor: pointer;
+    }
+  }
+}
+
+.txDialogBox {
+  width: 32.5rem;
+  min-height: 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  padding: 2.67rem 2rem;
+  border-radius: 1.67rem;
+  overflow: hidden;
+  p {
+    font-size: 1.5rem;
+    font-family: Inter-Medium, Inter;
+    font-weight: 500;
+    color: #222222;
+    line-height: 1.67rem;
+    text-align: center;
+  }
+  .txLink {
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0.6rem auto 0;
+    color: #8E50E4;
+    font-size: 1.17rem;
+  }
+}
