--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -1,4 +1,160 @@
 .containerBox {
   min-height: 80vh;
   background: #f4f4f9;
+
+  .profileHeaderBox {
+    height: 23.33rem;
+    background-color: white;
+
+    .profileHeader {
+      max-width: 100rem;
+      margin: auto;
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .headerInfo {
+        flex-grow: 1;
+
+        display: flex;
+        flex-direction: column;
+
+        .addressItem {
+          font-size: 3rem;
+          font-family: Inter-Medium, Inter;
+          font-weight: 500;
+          color: #222222;
+          line-height: 2.83rem;
+          display: flex;
+          align-items: center;
+        }
+
+        .chainsActiveItem {
+          display: flex;
+          align-items: center;
+          margin-top: 2.5rem;
+
+          .chainsActiveDesc {
+            font-size: 1.5rem;
+            font-family: Inter-SemiBold, Inter;
+            font-weight: 600;
+            color: #222222;
+            line-height: 1.5rem;
+            margin-right: 1.67rem;
+          }
+        }
+
+        .integralItem {
+          display: flex;
+          align-items: center;
+          margin-top: 2.5rem;
+          p {
+            font-size: 1.5rem;
+            font-family: Inter-SemiBold, Inter;
+            font-weight: 600;
+            color: #222222;
+            line-height: 1.5rem;
+          }
+          span {
+            color: #8e50e4;
+          }
+          .integralDesc {
+            margin-right: 0.83rem;
+          }
+        }
+      }
+
+      .passNFTBox {
+        flex-shrink: 0;
+        width: 13.33rem;
+        height: 13.33rem;
+        background: linear-gradient(#70fac5, #9552eb);
+        border-radius: 1rem;
+        position: relative;
+        overflow: hidden;
+
+        .imageMask {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          height: 4.25rem;
+          background: linear-gradient(
+            180deg,
+            rgba(0, 0, 0, 0) 0%,
+            #000000 100%
+          );
+          opacity: 0.55;
+        }
+        .imageTokenId {
+          position: absolute;
+          bottom: 0.67rem;
+          left: 0;
+          right: 0;
+          text-align: center;
+          font-size: 1.5rem;
+          font-family: Inter-SemiBold, Inter;
+          font-weight: 600;
+          color: #ffffff;
+          line-height: 1.5rem;
+        }
+      }
+    }
+  }
+
+  .profileContent {
+    max-width: 100rem;
+    min-height: 40rem;
+    margin: auto;
+
+    .tabsHeader {
+      margin-top: 4rem;
+
+      :global {
+        button {
+          font-size: 1.5rem;
+          font-family: Inter-SemiBold, Inter;
+          font-weight: 600;
+          color: #222222;
+          line-height: 1.5rem;
+          opacity: 0.5;
+          padding-left: 0 !important;
+          padding-right: 0 !important;
+          padding-bottom: 0.5rem !important;
+          width: auto;
+          min-width: 0 !important;
+          text-transform: unset;
+          & + button {
+            margin-left: 2.5rem;
+          }
+        }
+        .Mui-selected {
+          opacity: 1;
+        }
+        .MuiTabs-indicator {
+          height: 0.17rem;
+          background: #222222;
+        }
+      }
+    }
+
+    .itemBox {
+      .trialGameBtn {
+        display: inline-block;
+        text-align: center;
+        background: rgba(#8e50e4, 0.1);
+        border-radius: 2.5rem;
+        width: 26.67rem;
+        font-size: 1.75rem;
+        font-family: Inter-Medium, Inter;
+        font-weight: 500;
+        color: #8e50e4;
+        line-height: 1.33rem;
+        padding: 1.67rem;
+        user-select: none;
+        cursor: pointer;
+      }
+    }
+  }
 }
