--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -107,6 +107,7 @@
     max-width: 100rem;
     min-height: 40rem;
     margin: auto;
+    overflow: hidden;
 
     .tabsHeader {
       margin-top: 4rem;
@@ -154,6 +155,57 @@
         padding: 1.67rem;
         user-select: none;
         cursor: pointer;
+      }
+
+      margin-top: 2.5rem;
+      margin-bottom: 6.67rem;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+
+      & > div {
+        width: calc((100% - 6.18rem) / 4);
+        margin: auto 0.77rem;
+        margin-bottom: 2.08rem;
+      }
+    }
+
+    .activityBox {
+      margin-top: 1.67rem;
+      margin-bottom: 6.67rem;
+      background-color: white;
+      border-radius: 1rem;
+    }
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .containerBox {
+    .profileHeaderBox {
+      .profileHeader {
+        width: 94%;
+      }
+    }
+    .profileContent {
+      width: 94%;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .containerBox {
+    .profileHeaderBox {
+    }
+    .profileContent {
+      width: 100%;
+      .activityBox {
+        margin-bottom: 2rem;
+        margin-top: 1rem;
+      }
+
+      .tabsHeader {
+        padding-left: 1.33rem;
+        margin-top: 2.5rem;
       }
     }
   }
