--- a/components/Footer/styles.module.scss
+++ b/components/Footer/styles.module.scss
@@ -41,7 +41,7 @@
     }
     .linkList {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
     }
     .brands {
       flex-grow: 1;
